--- a/MindEaseChatbot/package.json
+++ b/MindEaseChatbot/package.json
@@ -15,7 +15,8 @@
     "next": "^14.2.15",
     "ollama-ai-provider": "^0.15.2",
     "react": "^18.3.1",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "eslint": "^8",
