--- a/MindEaseChatbot/package.json
+++ b/MindEaseChatbot/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ai-sdk/google": "^0.0.52",
     "@vercel/analytics": "^1.4.1",
+    "@vercel/speed-insights": "^1.1.0",
     "ai": "^3.4.16",
     "next": "^14.2.15",
     "ollama-ai-provider": "^0.15.2",
